# ai-document-platform

./: .gitignore  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  METRICS_GUIDE.md  MONITORING_SETUP.md  README.md  SECURITY.md  test-metrics-simple.sh  test-metrics.sh  test-upload.sh  validate-workflows.sh  verify-monitoring.sh
.github/workflows/: README.md  backend-lint.yml  backend-security.yml  backend-test.yml  build-all-services.yml  build-embedding-service.yml  build-gateway-service.yml  build-ingestion-service.yml  build-ner-service.yml  build-ocr-service.yml  build-query-service.yml
backend/: .pre-commit-config.yaml  DEVELOPMENT_SETUP.md  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
backend/embedding-service/: Dockerfile  README.md  SETUP.md  TESTING_GUIDE.md  VIRTUAL_ENV_GUIDE.md  docker-compose.yml  env.example  pyproject.toml  requirements-macos.txt  requirements.txt  test_endpoints.py  test_endpoints.sh  test_uuid_fix.py
backend/embedding-service/src/: __init__.py  config.py  embedding_processor.py  enhanced_embedding_processor.py  main.py  models.py  simplified_embedding_processor.py  utils.py
backend/embedding-service/tests/: __init__.py  test_api.py  test_embedding_processor.py
backend/gateway/: Dockerfile  README.md  SETUP.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_gateway.sh
backend/gateway/src/: auth.py  config.py  database.py  main.py  models.py
backend/gateway/tests/: __init__.py  test_api.py  test_auth.py  test_database.py
backend/ingestion/: Dockerfile  README.md  SETUP.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start_celery.sh  start_ner_event_consumer.sh
backend/ingestion/src/: __init__.py  celery_app.py  config.py  database.py  flower_config.py  main.py  models.py  processing.py  qdrant_client.py  redis_client.py  storage.py  utils.py
backend/ingestion/src/tasks/: __init__.py  completion_tasks.py  embedding_tasks.py  ner_event_consumers.py  ner_tasks.py  ocr_tasks.py
backend/ingestion/tests/: __init__.py  test_api.py  test_components.py
backend/ner-service/: Dockerfile  README.md  SETUP.md  VIRTUAL_ENV_GUIDE.md  docker-compose.yml  env.example  pyproject.toml  requirements-macos.txt  requirements.txt  test_language_support.py  test_model_fixes.py
backend/ner-service/src/: __init__.py  config.py  main.py  models.py  ner_processor.py  utils.py
backend/ner-service/tests/: __init__.py  test_api.py  test_ner_processor.py
backend/ocr-service/: Dockerfile  README.md  SETUP.md  VIRTUAL_ENV_GUIDE.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/ocr-service/src/: config.py  main.py  models.py  ocr_processor.py  utils.py
backend/ocr-service/tests/: test_api.py  test_ocr_processor.py
backend/prometheus/: prometheus.yml
backend/query-service/: Dockerfile  README.md  SETUP.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/query-service/src/: __init__.py  config.py  llm_client.py  main.py  models.py  query_processor.py  smart_context.py  utils.py
backend/query-service/tests/: test_api.py  test_query_processor.py  test_utils.py
docs/: ARCHITECTURE.md  ARCHITECTURE_DRAWING.md  DASHBOARD_TROUBLESHOOTING.md  MONITORING_SETUP.md  PRICING.md  TEST_STATE.md
docs/adr/: 0001-microservices-architecture.md  0002-processing-pipeline-architecture.md  0003-event-driven-vs-direct-processing.md  0004-vector-database-access-pattern.md  0005-worker-scaling-strategy.md  0006-api-gateway-integration.md  0007-document-chunking-strategy.md  0008-smart-context-assembly.md  README.md
frontend/: README.md
grafana-dashboards/dashboards/: api-gateway-service-overview.json  ingestion-service-overview.json
test-data/CVs/: README.md
test-data/Video Introduction/: README.md
